infrastructure/applications/backstage/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: backstage
  labels:
    app.kubernetes.io/name: backstage
    app.kubernetes.io/part-of: msdp-platform
    app.kubernetes.io/managed-by: kustomize
